// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default close button correctly 1`] = `
<IconButton
  aria-label="Some label"
  className="components-button-close-m__close-button-default components-button-close-m__close-button"
  icon={[Function]}
  onClick={[Function]}
  type="default"
/>
`;

exports[`should render a success close button correctly 1`] = `
<IconButton
  aria-label="Some label"
  className="components-button-close-m__close-button-success components-button-close-m__close-button"
  icon={[Function]}
  onClick={[Function]}
  type="inverse"
/>
`;

exports[`should render an error close button correctly 1`] = `
<IconButton
  aria-label="Some label"
  className="components-button-close-m__close-button-error components-button-close-m__close-button"
  icon={[Function]}
  onClick={[Function]}
  type="inverse"
/>
`;
